fix: add gap to layout and implement 'go Home' button in online state

--- a/django/static/css/game/match.css
+++ b/django/static/css/game/match.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    gap: 2rem;
 }
 
 #play-container {
